--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,6 @@ jobs:
         inlineScript: |
           # Login using the connection string
           echo "${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}" > azure_connection_string.txt
-          az storage blob sync --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT }} --container-name <your-container-name> --source ./ --delete-detected --recursive
+          az storage blob sync --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT }} --container-name devops321 --source ./ --delete-detected --recursive
       env:
         AZURE_STORAGE_CONNECTION_STRING: ${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}
