--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,7 @@ jobs:
       uses: azure/cli@v1
       with:
         inlineScript: |
-          # Login using the connection string
-          echo "${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}" > azure_connection_string.txt
-          az storage blob sync --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT }} --container-name devops321 --source ./ --delete-detected --recursive
+          # Sync files to Azure Blob Storage
+          az storage blob sync --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT }} --container devops321/mywebpage --source ./ --delete-detected --recursive
       env:
         AZURE_STORAGE_CONNECTION_STRING: ${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}
