--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,6 @@ jobs:
       with:
         inlineScript: |
           # Sync files to Azure Blob Storage
-          az storage blob sync --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT }} --container devops321/mywebpage --source ./ --delete-detected --recursive
+          az storage blob sync --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT }} --container mywebpage --source ./ --delete-detected --recursive
       env:
         AZURE_STORAGE_CONNECTION_STRING: ${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}
